<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="displayName">Display Name</string>
    <string name="username">Username</string>
    <string name="hello">Hello World, Startup!</string>
    <string name="app_name">LiveGather Android</string>
	<string name="login">Login</string>
	<string name="changePassword">Change Password</string>
	<string name="createAccount">Create Account</string>
	<string name="dateOfBirth">Date of Birth</string>
	<string name="email">Email</string>
	<string name="location">Location</string>
	<string name="caption">Caption</string>
	<string name="comments">Comments</string>
	<string name="tags">Tags</string>
	<string name="uploadPicture">Upload Picture</string>
	<string name="shared">Save to Shared Library</string>
	<string name="takePhoto">Take Photo</string>
</resources>
