<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clickable="true">

	<EditText android:id="@+id/caption" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:hint="@string/caption">
	</EditText>
	<EditText android:id="@+id/comments" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:hint="@string/comments">
	</EditText>
	<EditText android:id="@+id/tags" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:hint="@string/tags">
	</EditText>
	<Button	android:id="@+id/submitButton"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:text="@string/submit">
	</Button>
	<Button	android:id="@+id/capture"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:text="@string/takePhoto">
	</Button>
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/frame" />	
</LinearLayout>
