<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clickable="true">




	<EditText android:id="@+id/username"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:hint="@string/username"
		android:singleLine="true"
		android:ems="12" />
	<EditText android:id="@+id/password"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:hint="@string/password"
		android:password="true"
		android:singleLine="true"
		android:ems="12" />
	<TextView android:id="@+id/status"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:text=""
		android:textSize="20sp" />
	<Button android:id="@+id/submitButton"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:text="@string/submit"
		android:ems="7" />
</LinearLayout>
